--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
-MODEL_SIZE=large-v3
+#MODEL_SIZE=large-v3
+MODEL_SIZE=tiny
 DEVICE_TYPE=cuda
 COMPUTE_TYPE=float16
-DEVICE=cuda:0
 BEAM_SIZE=5
 VAD_FILTER=true
 MIN_SILENCE_DURATION_MS=50
